# ModelFineTuning

./: .gitignore  LICENSE  PretrainedModel.py  README.md  app.py  finetuningjob.py  main.py  mainLoadModelFT.py  pyproject.toml  requirements.txt
data/: data.json  dataset.jsonl  dpo_dataset.jsonl
data/finetuned-model/checkpoint-12/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
data/finetuned-model/checkpoint-4/: rng_state.pth  scheduler.pt  trainer_state.json
data/finetuned-model/checkpoint-8/: rng_state.pth  scheduler.pt  trainer_state.json
data/lora-model/: README.md
src/: loadDataset.py  loadModel.py  modelTranning.py
