[project]
name = "modelfinetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.3",
    "dotenv>=0.9.9",
    "numpy<2",
    "openai>=2.29.0",
    "peft<0.12.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "setuptools>=82.0.1",
    "streamlit>=1.55.0",
    "torch<=2.2.2",
    "transformers<5.0.0",
    "trl<0.9.0",
]
